show all elements

--- a/EmpowerBHCdryRun_1/EmpowerBHCdryRun_1.csproj
+++ b/EmpowerBHCdryRun_1/EmpowerBHCdryRun_1.csproj
@@ -49,8 +49,11 @@
     <Compile Include="EmpowerBHCdryRun_1.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Skyline.DataMiner.Core.DataMinerSystem.Automation">
+      <Version>1.1.0.5</Version>
+    </PackageReference>
     <PackageReference Include="Skyline.DataMiner.Dev.Automation">
-      <Version>10.1.0.6</Version>
+      <Version>10.3.6</Version>
     </PackageReference>
     <PackageReference Include="StyleCop.Analyzers">
       <Version>1.1.118</Version>
